--- a/09 - Dev Tools Domination copy/index-START.html
+++ b/09 - Dev Tools Domination copy/index-START.html
@@ -18,29 +18,47 @@
     }
 
     // Regular
+    console.log('hello')
 
     // Interpolated
-
+    console.log('hello i am a %s string!', '🔥')
+    
     // Styled
-
+    // console.log('%c I am some great text', 'font-size: 26px;')
     // warning!
-
+    console.warn('OHHH nnoooo')
     // Error :|
-
+    console.error('damn')
     // Info
-
+    console.info('Kodi is dope')
     // Testing
+    console.assert( 1 === 1, 'That is wrong')
 
+    const p = document.querySelector('p')
     // clearing
-
+    // console.clear();
     // Viewing DOM Elements
-
+    console.log(p);
+    console.dir(p);
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`)
+      console.log(`This is ${dog.name}`)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.groupEnd(`${dog.name}`)
+    })
     // counting
-
+    console.count('wes')
     // timing
+    console.time('fetching data')
+    fetch('https://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data')
+        console.log(data)
+      })
 
+      console.table(dogs)
   </script>
 </body>
 </html>
